; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/cxgb4/extr_qp.c_set_state.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/cxgb4/extr_qp.c_set_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.c4iw_qp = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.c4iw_qp*, i32)* @set_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_state(%struct.c4iw_qp* %0, i32 %1) #0 {
  %3 = alloca %struct.c4iw_qp*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store %struct.c4iw_qp* %0, %struct.c4iw_qp** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.c4iw_qp*, %struct.c4iw_qp** %3, align 8
  %7 = getelementptr inbounds %struct.c4iw_qp, %struct.c4iw_qp* %6, i32 0, i32 0
  %8 = load i64, i64* %5, align 8
  %9 = call i32 @spin_lock_irqsave(i32* %7, i64 %8)
  %10 = load i32, i32* %4, align 4
  %11 = load %struct.c4iw_qp*, %struct.c4iw_qp** %3, align 8
  %12 = getelementptr inbounds %struct.c4iw_qp, %struct.c4iw_qp* %11, i32 0, i32 1
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  store i32 %10, i32* %13, align 4
  %14 = load %struct.c4iw_qp*, %struct.c4iw_qp** %3, align 8
  %15 = getelementptr inbounds %struct.c4iw_qp, %struct.c4iw_qp* %14, i32 0, i32 0
  %16 = load i64, i64* %5, align 8
  %17 = call i32 @spin_unlock_irqrestore(i32* %15, i64 %16)
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
